fix: repair 1.0.97 release builds